# echobox-tts

./: .gitignore  EburonTTS_v1.0.0.apk  EburonTTS_v1.0.1.apk  LICENSE  README.md  capacitor.config.json  eburon_tts_server.py  echovoice.sh  index.html  package-lock.json  package.json  requirements.txt  test.spec.ts
Eburon TTS.app/Contents/: Info.plist
android/app/: build.gradle
android/app/src/main/java/com/eburon/tts/: MainActivity.java
android/app/src/main/res/values/: strings.xml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
