[package]
name = "eburon-tts"
version = "1.0.0"
description = "Eburon TTS Desktop App"
authors = ["Master E"]
edition = "2021"

[lib]
name = "eburon_tts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
